# ValeryNLP-project1_evsikov_valery_M25-555

./: .gitignore  README.md  demo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
