[tool.poetry]
name = "project1_evsikov_valery_m25_555"
version = "0.1.0"
description = "Text labyrinth game"
authors = ["Евсиков Валерий <vevsickov@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "labyrinth_game", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []